index styles made

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,22 @@
   /* Colors */
   --accent-color: #2196f3;
   --main-txt-color: #757575;
-  --white-txt-color: #ffffff;
+  --white-color: #ffffff;
   --dark-txt-color: #212121;
-  --white-bg-color: #ffffff;
-  --btn-portfolio-bg-color: #f5f4fa;
+  --section-bg-color: #f5f4fa;
+  --header-logo-color:#000000;
+  --btn-hover-color:#188ce8;
+  --second-section-color:#2f303a;
+
 
   /* Others */
 }
 
 body {
-  font-family: var(--main-font), sans-serif;
-  font-size: 16px;
+  font-family: var(--main-font), sans-serif,'Raleway';
+  font-size: 14px;
   line-height: 1.71;
+  color:var(--main-txt-color)
 }
 
 /* Common styles start */
@@ -36,6 +40,7 @@ body {
   font-size: 16px;
   line-height: 1.88;
   text-align: center;
+  cursor: pointer;
 }
 
 .section-title {
@@ -43,17 +48,29 @@ body {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  color:var(--dark-txt-color)
 }
 
 /* Common styles end */
 
+
 /* Header section start */
 .header {
-  background-color: var(--white-bg-color);
+  background-color: var(--white-color);
 }
 
-.header-logo {
+.header-logo,
+.footer-logo {
   font-family: 'Raleway';
+  font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+color: var(--accent-color);
+}
+
+.header-logo-color {
+    color: var(--header-logo-color);
 }
 
 .header-link {
@@ -88,14 +105,15 @@ body {
 
 /* Header section end */
 
+
 /* Main section start  */
 
 .hero {
-  background-color: #2f303a;
+  background-color: var(--second-section-color);
 }
 
 .btn-hero {
-  color: var(--white-txt-color);
+  color: var(--white-color);
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -105,13 +123,24 @@ body {
 
 .btn-hero:hover,
 .btn-hero:focus {
-  background-color: #188ce8;
+  background-color: var(--btn-hover-color);
 }
 
 .btn-works-type {
-  background-color: var(--btn-portfolio-bg-color);
+  background-color: var(--section-bg-color);
+  border:none;
   border-radius: 4px;
-  letter-spacing: 0.03em;
+  font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+letter-spacing: 0.03em;
+color: var(--dark-txt-color);
+}
+
+.btn-works-type:hover,
+.btn-works-type:focus {
+background-color:var(--accent-color);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .main-title {
@@ -121,7 +150,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--white-txt-color);
+  color: var(--white-color);
 }
 
 .skills-title {
@@ -132,4 +161,72 @@ body {
         text-transform: uppercase;
         color: var(--dark-txt-color);
 }
+
+.skills-text {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.team {
+    background-color: var(--section-bg-color);
+}
+
+.team-item {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.person-name {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.19;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--dark-txt-color);
+}
+
+.person-position {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-txt-color);
+}
+
 /* Main section end  */
+
+/* Footer styles start */
+.footer {
+    background-color:var(--second-section-color) ;
+}
+
+.footer-logo-color {
+    color:var(--white-color)
+}
+
+.footer-link {
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+}
+
+.footer-place {
+    color:var(--white-color)
+}
+
+.footer-contact {
+    color:rgba(255, 255, 255, 0.6);
+}
+
+.footer-place:hover,
+.footer-place:focus,
+.footer-contact:hover,
+.footer-contact:focus {
+    color:var(--accent-color)
+}
+
+/* Footer styles end */
